--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
        " \"Vlb\"  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,13 +33,20 @@
     "include(\"weight.jl\")\n",
     "ENV[\"PATH\"] *= \":/usr/local/gurobi/bin/:/home/zhangshiwei/.opam/4.06.0/bin\"\n",
     "\n",
-    "data_list = [\"abilene\", \"Cernet\", \"Cesnet201006\", \"Chinanet\", \"Esnet\", \"Garr200112\", \"Grnet\", \"Ibm\", \"jelly16\", \"Nordu1997\", \"Tinet\"]\n",
+    "data_list = [\"abilene\", \"gscale\", \"Cernet\", \"Cesnet201006\", \"Chinanet\", \"Esnet\", \"Garr200112\", \"Grnet\", \"Ibm\", \"jelly16\", \"Nordu1997\", \"Tinet\"]\n",
     "algo_list = [\"Ecmp\", \"Edskp\", \"Ksp\", \"Mcf\", \"Raeck\", \"Vlb\"]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## gen demand and budget"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +65,26 @@
     "end\n",
     "for i in data_list\n",
     "    gen_gravity(i)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function gen_budgets(data)\n",
+    "    hosts = readlines(\"data/$data.hosts\")\n",
+    "    n = length(hosts)\n",
+    "    open(\"data/$data.budgets\", \"w\") do fout\n",
+    "        for h in hosts\n",
+    "            println(fout, n * n - n)\n",
+    "        end\n",
+    "    end\n",
+    "end\n",
+    "for i in data_list\n",
+    "    gen_budgets(i)\n",
     "end"
    ]
   },
@@ -137,7 +164,9 @@
     "                               (\"greedy\", select_greedy),\n",
     "                               (\"hardnop\", select_hard_nop))\n",
     "            open(\"results/$data-$i-$algo-$name.result\", \"w\") do fout\n",
+    "                tic()\n",
     "                raw_scheme = select(nodes, edges, path_sets[algo], budgets)\n",
+    "                time = toq()\n",
     "                m1_scheme, Z = minimize_maximum_link_utilization(nodes, edges, demand, raw_scheme)\n",
     "                m2_scheme, Zs = minimize_maximum_link_utilization_then_maximize_throuput(nodes, edges, demand, raw_scheme)\n",
     "                \n",
@@ -146,6 +175,8 @@
     "                println(fout, \"number of demand pairs: \", length(demand))\n",
     "                println(fout, \"average budgets: \", mean(values(budgets)))\n",
     "                println(fout)\n",
+    "                \n",
+    "                println(fout, \"time elapsed during path selection: \", time, 's')\n",
     "                \n",
     "                println(fout, \"Z: \", Z)\n",
     "                println(fout, \"total throuput before the second step:\", sum(values(demand)) / max(Z, 1))\n",
