--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
        " \"Vlb\"  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
     "    n = length(hosts)\n",
     "    open(\"data/$data.budgets\", \"w\") do fout\n",
     "        for h in hosts\n",
-    "            println(fout, n * n - n)\n",
+    "            println(fout, 2 * (n * n - n))\n",
     "        end\n",
     "    end\n",
     "end\n",
