add latest files of Shiwei

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
        " \"Vlb\"  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,10 @@
     "include(\"weight.jl\")\n",
     "ENV[\"PATH\"] *= \":/usr/local/gurobi/bin/:/home/zhangshiwei/.opam/4.06.0/bin\"\n",
     "\n",
-    "data_list = [\"abilene\", \"gscale\", \"Cernet\", \"Cesnet201006\", \"Chinanet\", \"Esnet\", \"Garr200112\", \"Grnet\", \"Ibm\", \"jelly16\", \"Nordu1997\", \"Sprint\", \"Tinet\"]\n",
+    "#data_list = [\"abilene\", \"gscale\", \"Cernet\", \"Cesnet201006\", \"Chinanet\", \"Esnet\", \"Garr200112\", \"Grnet\", \"Ibm\", \"jelly16\", \"Nordu1997\", \"Sprint\", \"Tinet\"]\n",
+    "data_list = [\"Cernet\" , \"Globalcenter\" , \"Goodnet\" , \"Gridnet\" , \"gscale\" , \"Janetbackbone\" ,\n",
+    "\"Rediris\" , \"Renater2010\" , \"Sinet\" , \"Sprint\" , \"SprintINET\" , \"Surfnet\" ,\n",
+    "\"SwitchL3\" , \"TataNld\" , \"Tinet\" , \"Uninett2011\" , \"Uunet\" , \"VtlWavenet2011\" , \"Xeex\" , \"Xspedius\"]\n",
     "algo_list = [\"Ecmp\", \"Edksp\", \"Ksp\", \"Mcf\", \"Raeke\", \"Vlb\"]"
    ]
   },
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +57,7 @@
     "    hosts = readlines(\"data/$data.hosts\")\n",
     "    open(\"data/$data.demands\", \"w\") do fout\n",
     "        for k in 1:6\n",
+    "            #α = 2^(23 + k)\n",
     "            α = 2^(23 + k)\n",
     "            weigths = map(x->rand(), hosts)\n",
     "            list = [ α * weigths[i] * weigths[j]\n",
@@ -70,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +103,7 @@
        "write_scheme (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
